--- a/MISC/index.html
+++ b/MISC/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hangman Game</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
+</head>
+<body>
 
+    <!-- Language Selection Modal -->
+    <div id="language-modal" class="modal">
+        <div class="modal-content">
+            <h2>Choose a Language</h2>
+            <button onclick="selectLanguage('english')">English</button>
+            <button onclick="selectLanguage('bulgarian')">Bulgarian</button>
+        </div>
+    </div>
+
+    <div class="container">
+        <!-- Left Section: Lives and Word Display -->
+        <div class="left">
+            <div id="lives">❤️❤️❤️❤️❤️❤️</div>
+            <canvas id="hangmanCanvas" width="200" height="200"></canvas>
+            <div id="word-display">_ _ _ _ _</div>
+        </div>
+
+        <!-- Right Section: Letter Guess Input -->
+        <div class="right">
+            <input type="text" id="letter-input" maxlength="1" placeholder="Letter">
+            <button onclick="guessLetter()">Guess</button>
+            <div>
+                <h3>Guessed Letters:</h3>
+                <div id="guessed-letters"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- End Game Modal -->
+    <div id="result-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="modal-result"></h2>
+            <p id="modal-message"></p>
+            <p id="lives-left"></p>
+            <button id="play-again-btn" onclick="resetGame()">Play Again</button>
+        </div>
+    </div>
+
+</body>
+</html>
