--- a/Hangman/index.html
+++ b/Hangman/index.html
@@ -8,17 +8,29 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+
+    <div id="language-modal" class="modal">
+        <div class="modal-content">
+            <h2>Choose a Language</h2>
+            <button onclick="selectLanguage('english')">English</button>
+            <button onclick="selectLanguage('bulgarian')">Bulgarian</button>
+        </div>
+    </div>
+
     <div class="container">
         <div class="left">
             <div id="lives">❤️❤️❤️❤️❤️❤️</div>
             <canvas id="hangmanCanvas" width="200" height="200"></canvas>
             <div id="word-display">_ _ _ _ _</div>
         </div>
+
         <div class="right">
             <input type="text" id="letter-input" maxlength="1" placeholder="Letter">
             <button onclick="guessLetter()">Guess</button>
-            <h3>Guessed Letters:</h3>
-            <div id="guessed-letters"></div>
+            <div>
+                <h3>Guessed Letters:</h3>
+                <div id="guessed-letters"></div>
+            </div>
         </div>
     </div>
 
@@ -31,5 +43,6 @@
             <button id="play-again-btn" onclick="resetGame()">Play Again</button>
         </div>
     </div>
+
 </body>
 </html>
