--- a/MISC/index.html
+++ b/MISC/index.html
@@ -4,16 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
-    
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     
     <!-- Bootstrap JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="script.js"></script>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .font-size-36 {
+            font-size: 36px;
+        }
+        .font-size-24 {
+            font-size: 24px;
+        }
+        .w-80 {
+            width: 80%;
+        }
+        .w-350 {
+            width: 350px;
+        }
+        .shadow {
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100 bg-light">
+<body class="d-flex justify-content-center align-items-center vh-100 bg-light m-0">
+    <div class="container w-80 d-flex justify-content-between align-items-center flex-wrap">
+        <!-- Left Section -->
+        <div class="left d-flex flex-column justify-content-center align-items-center h-100 p-4">
+            <div id="lives" class="font-size-36 text-danger">❤️❤️❤️❤️❤️❤️</div>
+            <div id="word-display" class="font-size-36">_ _ _ _ _</div>
+            <input type="text" id="letter-input" class="form-control text-center font-size-24 p-2 mt-3 w-50" maxlength="1" placeholder="Enter a letter">
+            <button class="btn btn-primary font-size-24 p-3 m-2" onclick="guessLetter()">Submit</button>
+            <h3 class="mt-3">Guessed Letters:</h3>
+            <div id="guessed-letters" class="font-size-36"></div>
+        </div>
+
+        <!-- Right Section -->
+        <div class="right d-flex flex-column justify-content-center align-items-center h-100 p-4">
+            <canvas id="hangmanCanvas" width="250" height="250" class="border bg-white"></canvas>
+            <button id="play-again-btn" class="btn btn-success font-size-24 p-3 m-2" onclick="resetGame()">Play Again</button>
+        </div>
+    </div>
 
     <!-- Language Selection Modal -->
     <div class="modal fade" id="language-modal" tabindex="-1">
@@ -26,35 +63,24 @@
         </div>
     </div>
 
-    <div class="container d-flex justify-content-between align-items-center">
-        <!-- Left Section (Canvas + Word Display) -->
-        <div class="left text-center">
-            <div id="lives" class="fs-3 text-danger">❤️❤️❤️❤️❤️❤️</div>
-            <canvas id="hangmanCanvas" width="200" height="200" class="border my-3"></canvas>
-            <div id="word-display" class="fs-2 fw-bold">_ _ _ _ _</div>
-        </div>
-
-        <!-- Right Section (Letter Input + Guessed Letters) -->
-        <div class="right text-center">
-            <input type="text" id="letter-input" maxlength="1" class="form-control form-control-lg w-50 mx-auto my-2 text-center" placeholder="Letter">
-            <button class="btn btn-success btn-lg" onclick="guessLetter()">Guess</button>
-            <h3 class="mt-4">Guessed Letters:</h3>
-            <div id="guessed-letters" class="fs-4"></div>
-        </div>
-    </div>
-
-    <!-- Game Result Modal -->
+    <!-- Game Over Modal -->
     <div class="modal fade" id="result-modal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content text-center p-4">
+            <div class="modal-content bg-white p-5 rounded-3 w-350 text-center shadow">
                 <button type="button" class="btn-close position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
-                <h2 id="modal-result" class="mb-3"></h2>
+                <h3 id="modal-result" class="mb-3"></h3>
                 <p id="modal-message"></p>
                 <p id="lives-left" class="fs-4"></p>
-                <button id="play-again-btn" class="btn btn-primary mt-3" onclick="resetGame()">Play Again</button>
+                <button id="play-again-btn" class="btn btn-success font-size-24 p-3 m-2" onclick="resetGame()">Play Again</button>
             </div>
         </div>
     </div>
+
+    <script>
+        window.onload = function () {
+            new bootstrap.Modal(document.getElementById("language-modal")).show();
+        };
+    </script>
 
 </body>
 </html>
