--- a/MISC/index.html
+++ b/MISC/index.html
@@ -4,83 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Game</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Bootstrap JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .font-size-36 {
-            font-size: 36px;
-        }
-        .font-size-24 {
-            font-size: 24px;
-        }
-        .w-80 {
-            width: 80%;
-        }
-        .w-350 {
-            width: 350px;
-        }
-        .shadow {
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-        }
-    </style>
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100 bg-light m-0">
-    <div class="container w-80 d-flex justify-content-between align-items-center flex-wrap">
-        <!-- Left Section -->
-        <div class="left d-flex flex-column justify-content-center align-items-center h-100 p-4">
-            <div id="lives" class="font-size-36 text-danger">❤️❤️❤️❤️❤️❤️</div>
-            <div id="word-display" class="font-size-36">_ _ _ _ _</div>
-            <input type="text" id="letter-input" class="form-control text-center font-size-24 p-2 mt-3 w-50" maxlength="1" placeholder="Enter a letter">
-            <button class="btn btn-primary font-size-24 p-3 m-2" onclick="guessLetter()">Submit</button>
-            <h3 class="mt-3">Guessed Letters:</h3>
-            <div id="guessed-letters" class="font-size-36"></div>
-        </div>
+<body>
 
-        <!-- Right Section -->
-        <div class="right d-flex flex-column justify-content-center align-items-center h-100 p-4">
-            <canvas id="hangmanCanvas" width="250" height="250" class="border bg-white"></canvas>
-            <button id="play-again-btn" class="btn btn-success font-size-24 p-3 m-2" onclick="resetGame()">Play Again</button>
+    <!-- Language & Difficulty Selection Modal -->
+    <div id="language-modal" class="modal">
+        <div class="modal-content">
+            <h2>Choose a Language</h2>
+            <button onclick="selectLanguage('english')">English</button>
+            <button onclick="selectLanguage('bulgarian')">Bulgarian</button>
+            <h3>Select Difficulty</h3>
+            <label><input type="radio" name="difficulty" value="easy" checked> Easy</label>
+            <label><input type="radio" name="difficulty" value="medium"> Medium</label>
+            <label><input type="radio" name="difficulty" value="hard"> Hard</label>
         </div>
     </div>
 
-    <!-- Language Selection Modal -->
-    <div class="modal fade" id="language-modal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content text-center p-4">
-                <h2 class="mb-3">Choose a Language</h2>
-                <button class="btn btn-primary m-2" onclick="selectLanguage('english')">English</button>
-                <button class="btn btn-secondary m-2" onclick="selectLanguage('bulgarian')">Bulgarian</button>
+    <!-- Main Game UI -->
+    <div class="container">
+        <div class="left">
+            <div id="lives">❤️❤️❤️❤️❤️❤️</div>
+            <canvas id="hangmanCanvas" width="200" height="200"></canvas>
+            <div id="word-display">_ _ _ _ _</div>
+        </div>
+
+        <div class="right">
+            <input type="text" id="letter-input" maxlength="1" placeholder="Letter">
+            <button onclick="guessLetter()">Guess</button>
+            <div>
+                <h3>Guessed Letters:</h3>
+                <div id="guessed-letters"></div>
             </div>
         </div>
     </div>
 
-    <!-- Game Over Modal -->
-    <div class="modal fade" id="result-modal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content bg-white p-5 rounded-3 w-350 text-center shadow">
-                <button type="button" class="btn-close position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
-                <h3 id="modal-result" class="mb-3"></h3>
-                <p id="modal-message"></p>
-                <p id="lives-left" class="fs-4"></p>
-                <button id="play-again-btn" class="btn btn-success font-size-24 p-3 m-2" onclick="resetGame()">Play Again</button>
-            </div>
+    <!-- Result Modal -->
+    <div id="result-modal" class="modal">
+        <div class="modal-content">
+            <h2 id="modal-result"></h2>
+            <p id="modal-message"></p>
+            <p id="lives-left"></p>
+            <button onclick="resetGame()">Play Again</button>
         </div>
     </div>
-
-    <script>
-        window.onload = function () {
-            new bootstrap.Modal(document.getElementById("language-modal")).show();
-        };
-    </script>
 
 </body>
 </html>
