--- a/MISC/index.html
+++ b/MISC/index.html
@@ -1,51 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman Game</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hangman Game</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="cordova.js"></script>
+  <script src="components/loader.js"></script>
+  <script defer src="script.js"></script>
+  <style>
+    #lives, #word-display, #guessed-letters {
+      font-size: 2rem;
+    }
+    canvas {
+      width: 250px;
+      height: 250px;
+    }
+    .modal-content {
+      text-align: center;
+    }
+  </style>
 </head>
-<body>
+<body class="bg-light d-flex flex-column justify-content-center align-items-center min-vh-100">
 
-    <div id="language-modal" class="modal">
-        <div class="modal-content">
-            <h2 id="language-modal-title">Choose a Language</h2>
-            <button onclick="selectLanguage('english')">English</button>
-            <button onclick="selectLanguage('bulgarian')">Bulgarian</button>
-            <h3>Select Difficulty</h3>
-            <label><input type="radio" name="difficulty" value="easy" checked> <span>Easy</span></label>
-            <label><input type="radio" name="difficulty" value="medium"> <span>Medium</span></label>
-            <label><input type="radio" name="difficulty" value="hard"> <span>Hard</span></label>
+  <!-- Language Modal -->
+  <div id="language-modal" class="modal d-flex" tabindex="-1" style="display: flex;">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-4">
+        <h2 id="language-modal-title">Choose a Language/Избери език</h2>
+        <div class="d-grid gap-2 my-3">
+          <button class="btn btn-primary" onclick="selectLanguage('english')">English</button>
+          <button class="btn btn-primary" onclick="selectLanguage('bulgarian')">Bulgarian</button>
         </div>
+        <h3>Select Difficulty/ Избери Трудност</h3>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="difficulty" value="easy" id="easy" checked>
+          <label class="form-check-label" for="easy">Easy/Лесно</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="difficulty" value="medium" id="medium">
+          <label class="form-check-label" for="medium">Medium/Средно</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="difficulty" value="hard" id="hard">
+          <label class="form-check-label" for="hard">Hard/Трудно</label>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <div class="container">
-        <div class="left">
-            <div id="lives">❤️❤️❤️❤️❤️❤️</div>
-            <canvas id="hangmanCanvas" width="200" height="200"></canvas>
-            <div id="word-display">_ _ _ _ _</div>
-        </div>
+  <!-- Main Game Container -->
+  <div class="container my-4">
+    <div class="row text-center">
+      <!-- Left Section -->
+      <div class="col-md-6 d-flex flex-column align-items-center mb-4 mb-md-0">
+        <div id="lives">❤️❤️❤️❤️❤️❤️</div>
+        <canvas id="hangmanCanvas" width="200" height="200" class="my-3"></canvas>
+        <div id="word-display">_ _ _ _ _</div>
+      </div>
 
-        <div class="right">
-            <input type="text" id="letter-input" maxlength="1" placeholder="Letter">
-            <button id="guess-button" onclick="guessLetter()">Guess</button>
-            <div>
-                <h3 id="guessed-letters-label">Guessed Letters:</h3>
-                <div id="guessed-letters"></div>
-            </div>
-        </div>
+      <!-- Right Section -->
+      <div class="col-md-6 d-flex flex-column align-items-center">
+        <h3 id="language">English</h3>
+        <input type="text" id="letter-input" class="form-control w-50 my-2 text-center" maxlength="1" placeholder="Letter">
+        <button id="guess-button" class="btn btn-success mb-3" onclick="guessLetter()">Guess</button>
+        <h3 id="guessed-letters-label">Guessed Letters:</h3>
+        <div id="guessed-letters"></div>
+      </div>
     </div>
+  </div>
 
-    <div id="result-modal" class="modal">
-        <div class="modal-content">
-            <h2 id="modal-result"></h2>
-            <p id="modal-message"></p>
-            <p id="lives-left"></p>
-            <button id="play-again-btn" onclick="resetGame()">Play Again</button>
-        </div>
+  <!-- Result Modal -->
+  <div id="result-modal" class="modal d-flex" tabindex="-1" style="display: none;">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-4">
+        <h2 id="modal-result"></h2>
+        <p id="modal-message"></p>
+        <p id="lives-left"></p>
+        <button id="play-again-btn" class="btn btn-success" onclick="resetGame()">Play Again</button>
+      </div>
     </div>
+  </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
